--- a/public/templates/theme-v2/products/evoucher-list.html
+++ b/public/templates/theme-v2/products/evoucher-list.html
@@ -1,327 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-
-    <!-- Font -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style2.css">
-    <link rel="stylesheet" href="css/font.css">
-
-    <!--Slider css-->
-    <link type="text/css" rel="stylesheet" href="css/lightslider.css"/>
-
-    <!-- Style customize -->
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-
-<header class="fixed-top border-bottom-1 bg-white">
-    <div class="container">
-        <div class="row py16 align-items-center">
-            <div class="col-1">
-                <div class="nav-icon"><span class="icon-menu"></span></div>
-            </div>
-            <div class="col-2">
-                <img class="logo w-75" src="../../../assets/images/logo_vnshop.png" alt="logo">
-            </div>
-            <div class="col-5 border-right-1">
-
-                <div class="field">
-                    <label for="field-search">
-                        <span class="placeholder content">Tìm kiếm</span>
-                    </label>
-                    <input class="input-search content" id="field-search" type="text">
-                    <div class="field-icon nav-icon">
-                        <span class="icon-Search"></span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-2">
-                <div class="nav-icon icon-size-24 text-grey"><span class="icon-cart"></span><span class="content">&nbsp;&nbsp;Giỏ hàng của tôi</span>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="nav-icon icon-size-24 text-grey"><span class="icon-user"></span><span class="content">&nbsp;&nbsp;Đào Thái Hà</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
 <main>
     <div class="container py24">
-
         <div class="row">
             <ol class="breadcrumb content">
-                <li class="breadcrumb-item"><a href="#">VNSHOP</a></li>
-                <li class="breadcrumb-item"><a href="#">Thực phẩm sạch</a></li>
-                <li class="breadcrumb-item">Nhà cung cấp</li>
-                <li class="breadcrumb-item active">Vina farm</li>
+                <li class="breadcrumb-item"><a href="#" ng-click="ctrl.openHome()">VNSHOP</a></li>
+                <li ng-repeat="parent in ctrl.parents track by $index" ng-click="ctrl.openCategory(parent.id)" class="breadcrumb-item">Nhà cung cấp</li>
+                <li class="breadcrumb-item active">{{ctrl.category.name}}</li>
             </ol>
         </div>
-
         <div class="row mt16">
             <div class="col-3">
                 <div class="row">
                     <div class="col-12">
-                        <select class="form-control content mt16">
-                            <option>-- Sắp xếp theo --</option>
-                        </select>
+						<select class="form-control content mt16" ng-model="ctrl.sort" ng-change="sort()">>
+							<option value="" ng-selected="selected">-- Sắp xếp theo --</option>
+							<option value="1">Giá tăng dần</option>
+							<option value="2">Giá giảm dần</option>
+							<option value="3">Sản phẩm mới</option>
+						</select>
 
-                        <select class="form-control content mt16">
-                            <option>Hiển thị: 16 sản phẩm</option>
-                        </select>
+						<select class="form-control content mt16" ng-model="ctrl.limit" ng-change="limit()">>
+							<option value="12" ng-selected="selected">Hiển thị 12 sản phẩm</option>
+							<option value="24">Hiển thị 24 sản phẩm</option>
+							<option value="60">Hiển thị 60 sản phẩm</option>
+							<option value="90">Hiển thị 90 sản phẩm</option>
+						</select>
                     </div>
                 </div>
-
                 <div class="row py16 border-bottom-1">
                     <div class="col-12">
                         <div class="content mb8">Thương hiệu</div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;Mama</div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;Mama</div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;Mama</div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;Mama</div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;Mama</div>
+                        <div ng-repeat="brand in ctrl.brands track by $index">
+                            <div ng-if="ctrl.brandId.indexOf(brand.id) > -1" ng-click="ctrl.openBrand(brand.id, 1)" class="d-flex align-items-center">
+                                <input type="checkbox" checked value="{{brand.id}}" /><span>&nbsp;&nbsp;&nbsp;{{ brand.name | limitTo: 20 }}{{brand.name.length > 20 ? '...' : ''}}</span>
+                            </div>
+                            <div ng-if="ctrl.brandId.indexOf(brand.id) <= -1" ng-click="ctrl.openBrand(brand.id)" class="d-flex align-items-center">
+                                <input type="checkbox" value="{{brand.id}}" /><span>&nbsp;&nbsp;&nbsp;{{ brand.name | limitTo: 20 }}{{brand.name.length > 20 ? '...' : ''}}</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
                 <div class="row py16">
                     <div class="col-12">
                         <div class="content mb8">Khoảng giá</div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;0 - 1.000.000đ
-                        </div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;0 - 1.000.000đ
-                        </div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;0 - 1.000.000đ
-                        </div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;0 - 1.000.000đ
-                        </div>
-                        <div class="d-flex align-items-center"><input type="checkbox">&nbsp;&nbsp;&nbsp;0 - 1.000.000đ
-                        </div>
+                        <div class="d-flex align-items-center" ng-if="'0,500000' == ctrl.ratePrice" ng-click="ctrl.openRatePrice('0,500000', 1)"><input type="checkbox" checked /><span>&nbsp;&nbsp;&nbsp;Dưới 500.000</span></div>
+                        <div class="d-flex align-items-center" ng-if="'0,500000' != ctrl.ratePrice" ng-click="ctrl.openRatePrice('0,500000')"><input type="checkbox" /><span>&nbsp;&nbsp;&nbsp;Dưới 500.000</span></div>
+                        <div class="d-flex align-items-center" ng-if="'500000,1500000' == ctrl.ratePrice" ng-click="ctrl.openRatePrice('500000,1500000', 1)"><input type="checkbox" checked /><span>&nbsp;&nbsp;&nbsp;500.000 - 1.500.000</span></div>
+                        <div class="d-flex align-items-center" ng-if="'500000,1500000' != ctrl.ratePrice" ng-click="ctrl.openRatePrice('500000,1500000')"><input type="checkbox" /><span>&nbsp;&nbsp;&nbsp;500.000 - 1.500.000</span></div>
+                        <div class="d-flex align-items-center" ng-if="'1500000,2500000' == ctrl.ratePrice" ng-click="ctrl.openRatePrice('1500000,2500000', 1)"><input type="checkbox" checked /><span>&nbsp;&nbsp;&nbsp;1.500.000 - 2.500.000</span></div>
+                        <div class="d-flex align-items-center" ng-if="'1500000,2500000' != ctrl.ratePrice" ng-click="ctrl.openRatePrice('1500000,2500000')"><input type="checkbox" /><span>&nbsp;&nbsp;&nbsp;1.500.000 - 2.500.000</span></div>
+                        <div class="d-flex align-items-center" ng-if="2500000 == ctrl.ratePrice" ng-click="ctrl.openRatePrice('2500000', 1)"><input type="checkbox" checked /><span>&nbsp;&nbsp;&nbsp;Trên 2.500.000</span></div>
+                        <div class="d-flex align-items-center" ng-if="2500000 != ctrl.ratePrice" ng-click="ctrl.openRatePrice('2500000')"><input type="checkbox" /><span>&nbsp;&nbsp;&nbsp;Trên 2.500.000</span></div>
                     </div>
                 </div>
-
             </div>
 
             <div class="col-9">
                 <div class="row content">
-
-                    <div class="col-6 mt16 d-flex">
+                    <div ng-if="!ctrl.hasData">Không tìm thấy sản phẩm</div>
+                    <div ng-repeat="product in ctrl.products track by $index" class="col-6 mt16 d-flex">
                         <div class="flex-grow-7">
-                            <img class="w-100" src="../../../assets/images/voucher-1.png" alt="">
+                            <a ng-click="ctrl.openDetail(product.id)"><img class="w-100" src="{{product.image}}" alt=""></a>
                         </div>
                         <div class="flex-grow-5">
                             <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
-                                    Thành - Hà Nội
-                                </div>
+                                <div class="voucher-title border-bottom-1 pb8"><a ng-click="ctrl.openDetail(product.id)">{{product.name}}</a></div>
                                 <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
+                                    <div class="" ng-repeat="location in product.locations track by $index">{{location.name}}</div>
                                     <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
+                                    <div class="">{{product.start_date}} - {{product.expired_date}}</div>
                                 </div>
-                                <div class="product-price">150.000 VND</div>
+                                <div class="product-price">{{ product.price | number }} VND</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
-                            <img class="w-100" src="../../../assets/images/voucher-1.png" alt="">
-                        </div>
-                        <div class="flex-grow-5">
-                            <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
-                                    Thành - Hà Nội
-                                </div>
-                                <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
-                                </div>
-                                <div class="product-price">150.000 VND</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
-                            <img class="w-100" src="../../../assets/images/voucher-1.png" alt="">
-                        </div>
-                        <div class="flex-grow-5">
-                            <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
-                                    Thành - Hà Nội
-                                </div>
-                                <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
-                                </div>
-                                <div class="product-price">150.000 VND</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
-                            <img class="w-100" src="../../../assets/images/voucher-1.png" alt="">
-                        </div>
-                        <div class="flex-grow-5">
-                            <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
-                                    Thành - Hà Nội
-                                </div>
-                                <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
-                                </div>
-                                <div class="product-price">150.000 VND</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
-                            <img class="w-100" src="../../../assets/images/voucher-1.png" alt="">
-                        </div>
-                        <div class="flex-grow-5">
-                            <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
-                                    Thành - Hà Nội
-                                </div>
-                                <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
-                                </div>
-                                <div class="product-price">150.000 VND</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 mt16 d-flex">
-                        <div class="flex-grow-7">
-                            <img class="w-100" src="../../../assets/images/voucher-1.png" alt="">
-                        </div>
-                        <div class="flex-grow-5">
-                            <div class="voucher-box h-100">
-                                <div class="voucher-title border-bottom-1 pb8">MonSoon Music Festival 2017 tại Hoàng
-                                    Thành - Hà Nội
-                                </div>
-                                <div class="voucher-address py8 flex-grow">
-                                    <div class="">TP Hà Nội</div>
-                                    <div class="">Thời gian áp dụng:</div>
-                                    <div class="">24/1/2141 - 21/1/1212</div>
-                                </div>
-                                <div class="product-price">150.000 VND</div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
-
         </div>
     </div>
 </main>
-
-<footer class="border-top-1">
-    <div class="container py16">
-        <div class="row py16 d-flex align-items-center">
-            <div class="col-3">
-                <img class="logo w-50" src="../../../assets/images/logo_vnshop.png" alt="logo">
-            </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Liên lạc
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Vnshop
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Chăm sóc khách hàng
-                </div>
-            </div>
-        </div>
-
-        <div class="row py16">
-            <div class="col-3">
-                <div class="content-footer">Công ty TNHH Vnshop</div>
-                <div class="content-footer mt8">Tầng 7 Hoàng Hòa Thám</div>
-                <div class="content-footer mt8">Thụy Khê Hà Nội</div>
-            </div>
-            <div class="col-3">
-                <div class="content-footer"><img src="../../../assets/images/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</div>
-                <div class="content-footer text-uppercase mt8"><img src="../../../assets/images/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com
-                </div>
-            </div>
-            <div class="col-3 text-uppercase">
-                <div class="content-footer">Giới thiệu</div>
-                <div class="content-footer mt8">Tuyển dụng</div>
-                <div class="content-footer mt8">Đối tác</div>
-            </div>
-            <div class="col-3 text-uppercase">
-                <div class="content-footer">Hỏi đáp</div>
-                <div class="content-footer mt8">Chính sách đổi trả</div>
-                <div class="content-footer mt8">Điều khoản quy định</div>
-                <div class="content-footer mt8">Giao hàng</div>
-                <div class="content-footer mt8">Thuế</div>
-            </div>
-        </div>
-
-    </div>
-</footer>
-<!-- jQuery first, then Tether, then Bootstrap JS. -->
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/tether.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/lightslider.js"></script>
-
-<script>
-    (function () {
-
-        var fieldSearch = $('#field-search');
-        fieldSearch.focus(function () {
-            $('.field label').hide();
-        });
-
-        fieldSearch.blur(function () {
-            if ($(this).val() === '') {
-                $('.field label').show();
-            }
-        });
-
-
-        //Script slider
-        $('#supplier-slide').lightSlider({
-            item: 4,
-            loop: true,
-            slideMove: 1,
-            auto: true,
-            pauseOnHover: true,
-            easing: 'cubic-bezier(0.25, 0, 0.25, 1)',
-            speed: 500
-        });
-        $('#supplier-new-slide').lightSlider({
-            item: 4,
-            loop: true,
-            slideMove: 1,
-            auto: true,
-            pauseOnHover: true,
-            easing: 'cubic-bezier(0.25, 0, 0.25, 1)',
-            speed: 500
-        });
-
-
-    })();
-</script>
-</body>
-</html>
