--- a/public/templates/theme-v2/partials/header.html
+++ b/public/templates/theme-v2/partials/header.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col-1 col-md-2">
                 <div class="nav-icon icon-size-24 text-grey">
-                    <a ng-click="headerCtrl.openCart()">
+                    <a ng-click="headerCtrl.goState('cart')">
                         <span class="icon-cart"></span>
                         <span class="content hidden-md-down">&nbsp;&nbsp;Giỏ hàng của tôi</span>
                     </a>
