--- a/public/templates/theme-v2/partials/footer.html
+++ b/public/templates/theme-v2/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container py16">
         <div class="row py16 d-flex align-items-center">
             <div class="col-md-3">
-                <img class="logo w-50" src="../../../assets/images/logo_vnshop.png" alt="logo">
+                <img class="logo w-50" ng-click="footerCtrl.goState('home')" src="/assets/images/logo_vnshop.png" alt="logo">
             </div>
             <div class="col-md-3">
                 <div class="content-footer text-bold text-uppercase">
@@ -20,7 +20,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row py16">
             <div class="col-md-3">
                 <div class="content-footer">Công ty TNHH Vnshop</div>
@@ -28,8 +27,8 @@
                 <div class="content-footer mt8">Thụy Khê Hà Nội</div>
             </div>
             <div class="col-md-3">
-                <div class="content-footer"><img src="../../../assets/images/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</div>
-                <div class="content-footer text-uppercase mt8"><img src="../../../assets/images/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com
+                <div class="content-footer"><img src="/assets/images/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</div>
+                <div class="content-footer text-uppercase mt8"><img src="/assets/images/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com
                 </div>
             </div>
             <div class="col-md-3 text-uppercase">
