--- a/public/templates/theme-v2/partials/header.html
+++ b/public/templates/theme-v2/partials/header.html
@@ -5,7 +5,7 @@
                 <div class="nav-icon"><span class="icon-menu"></span></div>
             </div>
             <div class="col-3 col-md-2">
-                <img ng-click="headerCtrl.openHome()" class="logo w-75" src="/assets/images/logo_vnshop.png" alt="logo">
+                <img ng-click="headerCtrl.goState('home')" class="logo w-75" src="/assets/images/logo_vnshop.png" alt="logo">
             </div>
             <div class="col-6 col-md-5 border-right-1">
                 <div class="field">
